<package>
	<name>lib_cvgloggerROS</name>
	<version>1.0.0</version>
	<description>
    		This package is lib_cvgloggerROS.
	</description>
	<author email="jespestana@gmail.com">Jesus Pestana Puerta</author>
	<maintainer email="jespestana@gmail.com">Jesus Pestana Puerta</maintainer>
  	<license>GPLv3</license>
	<url>http://ros.org/wiki/lib_cvgloggerROS</url>

  	<buildtool_depend>catkin</buildtool_depend>


	<build_depend>message_generation</build_depend>
  	<build_depend>roscpp</build_depend>
	<build_depend>droneModuleROS</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>lib_cvglogger</build_depend>
	<build_depend>lib_cvgutils</build_depend>
	<build_depend>droneMsgsROS</build_depend>

	<run_depend>message_runtime</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>droneModuleROS</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>lib_cvglogger</run_depend>
	<run_depend>lib_cvgutils</run_depend>
	<run_depend>droneMsgsROS</run_depend>


</package>


