<?xml version="1.0"?>
<package>
  <name>self_localization_selector_process</name>
  <version>0.1.0</version>
  <description>The self_localization package</description>

  <author email="alberto.camporredondo@gmail.com">Alberto Camporredondo Portela</author>
  <maintainer email="alberto.camporredondo@gmail.com">Alberto Camporredondo Portela</maintainer>

  <license>GPLv3</license>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>drone_process</build_depend>
  <build_depend>droneMsgsROS</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>drone_process</run_depend>
  <run_depend>droneMsgsROS</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
